edit options in admin accounts view

--- a/MVCApp/Views/Admin/_AccountsPartial.cshtml
+++ b/MVCApp/Views/Admin/_AccountsPartial.cshtml
@@ -73,7 +73,7 @@
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pen"></i></a>
-                    <a asp-action="Detail" asp-route-id="@item.Id"><i class="fas fa-user-cog"></i></a>
+                    <a asp-action="Detail" asp-route-id="@item.Id"><i class="fas fa-info-circle"></i></a>
                     <a class="delete-item" href="#" val="@item.Id"><i class="fas fa-trash-alt"></i></a>
                 </td>
             </tr>
