--- a/MVCApp/wwwroot/css/AdminStyles.scss
+++ b/MVCApp/wwwroot/css/AdminStyles.scss
@@ -35,6 +35,38 @@ body {
         }
     }
 }
+.card {
+    .formular-container {
+        margin: 0.5rem;
+
+        form {
+            display: flex;
+            flex-direction: column;
+
+            .form-element {
+                #statusRow {
+                    [class*="col-"] {
+                        display: flex;
+                        align-items: center;
+
+                        .status-control {
+                            margin: 0 5px 0 5px;
+                        }
+                    }
+                }
+            }
+
+            .control-element {
+                display: flex;
+                justify-content: flex-end;
+
+                input {
+                    margin: 0 5px 0 5px;
+                }
+            }
+        }
+    }
+}
 
 .fixed-width {
     min-width: 7rem;
@@ -42,6 +74,10 @@ body {
 
 .alert {
     margin: 1rem 0.5rem 1rem 0.5rem;
+}
+
+.text-bold {
+    font-weight:500;
 }
 
 .outline-dark {
@@ -89,6 +125,11 @@ body {
     align-items: baseline;
     align-content: stretch;
     padding: 1rem 0 0.5rem 0;
+    margin: 0 2rem 0 2rem;
+}
+
+.toolbox-right {
+    justify-content: right !important;
 }
 
 .input-group {
@@ -123,6 +164,9 @@ body {
     color: $color_green;
 }
 .fa-user-cog {
+    color: $color_yellow;
+}
+.fa-info-circle {
     color: $color_yellow;
 }
 .fa-trash-alt {
