--- a/MVCApp/Views/Admin/_AdminNav.cshtml
+++ b/MVCApp/Views/Admin/_AdminNav.cshtml
@@ -54,7 +54,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    //<script src="https://unpkg.com/@@popperjs/core@2/dist/umd/popper.js"></script>
+    <script src="https://unpkg.com/@@popperjs/core@2/dist/umd/popper.js"></script>
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
