--- a/MVCApp/Views/Admin/Accounts.cshtml
+++ b/MVCApp/Views/Admin/Accounts.cshtml
@@ -74,3 +74,8 @@
 <div class="card table-card">
     @await Html.PartialAsync("_AccountsPartial", Model)
 </div>
+
+@section Scripts {
+
+    <script src="~/js/AdminAccountsControl.js" asp-append-version="true"></script>
+}
