--- a/MVCApp/Views/Admin/_AdminNav.cshtml
+++ b/MVCApp/Views/Admin/_AdminNav.cshtml
@@ -35,7 +35,7 @@
                         <a class="nav-link text-admin" asp-action="Accounts"><i class="fas fa-user"></i> Accounts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-admin" asp-action="Accounts"><i class="fas fa-book"></i> Articles</a>
+                        <a class="nav-link text-admin" asp-action="Articles"><i class="fas fa-book"></i> Articles</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,6 @@
             $('[data-toggle="tooltip"]').tooltip()
         })
     </script>
-    <script src="~/js/Control.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
