--- a/MVCApp/Views/Admin/Articles.cshtml
+++ b/MVCApp/Views/Admin/Articles.cshtml
@@ -1,52 +1,81 @@
 ﻿@model IEnumerable<MVCApp.Models.ArticleModel>
-
 @{
-    ViewData["Title"] = "Articles administration";
+    ViewData["Title"] = "Admin - Accounts";
     Layout = "~/Views/Admin/_AdminNav.cshtml";
 }
 
+<div class="toolbox">
+    <div class="input-group">
+        <div class="input-group-prepend">
+            <button class="btn btn-dark-inv outline-dark btn-right" type="button">Sort by:</button>
+        </div>
+        <div class="dropdown" id="SortByDropdown">
+            <button class="btn btn-toggle btn-green outline-dark btn-left fixed-width dropdown-toggle" type="button" id="SortButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Register date ascending
+            </button>
+            <div class="dropdown-menu sort-dropdown" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#" val="nameAsc">Name ascending</a>
+                <a class="dropdown-item" href="#" val="nameDesc">Name descending</a>
+                <a class="dropdown-item" href="#" val="regDateAsc">Register date ascending</a>
+                <a class="dropdown-item" href="#" val="regDateDesc">Register date descending</a>
+                <a class="dropdown-item" href="#" val="logDateAsc">Login date ascending</a>
+                <a class="dropdown-item" href="#" val="logDateDesc">Login date descending</a>
+            </div>
+        </div>
+    </div>
+    <div class="input-group">
+        <div class="input-group-prepend">
+            <button class="btn btn-dark-inv outline-dark btn-right" type="button">Role:</button>
+        </div>
+        <div class="dropdown" id="RoleDropdown">
+            <button class="btn btn-toggle btn-green outline-dark btn-left fixed-width dropdown-toggle" type="button" id="Role" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                All
+            </button>
+            <div class="dropdown-menu role-dropdown" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#" val="All">All</a>
+                <a class="dropdown-item" href="#" val="Admin">Administrator</a>
+                <a class="dropdown-item" href="#" val="User">User</a>
+            </div>
+        </div>
+    </div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Synopsis)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Content)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Synopsis)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Content)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+    <div class="input-group">
+        <div class="input-group-prepend">
+            <button class="btn btn-dark-inv outline-dark btn-right" type="button">Account Status:</button>
+        </div>
+        <div class="dropdown" id="StatusDropdown">
+            <button class="btn btn-toggle btn-green outline-dark btn-left fixed-width dropdown-toggle" type="button" id="Status" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                All
+            </button>
+            <div class="dropdown-menu status-dropdown" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#" val="All">All</a>
+                <a class="dropdown-item" href="#" val="Enabled">Enabled</a>
+                <a class="dropdown-item" href="#" val="Disabled">Disabled</a>
+                <a class="dropdown-item" href="#" val="Pending">Pending</a>
+            </div>
+        </div>
+    </div>
+    <div class="input-group">
+        <button type="button" class="btn btn-blue outline-dark" href="Synchronize" data-toggle="tooltip" data-placement="top" title="Sync app and identity db tables">
+            Sync
+        </button>
+    </div>
 
+    <div class="input-group" id="AccountSearcher">
+        <input type="text" class="form-control outline-dark btn-right" id="SearchBar" placeholder="Search query e.g. 'Jim'" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="SearchButton"><i class="fas fa-search"></i></button>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="card table-card">
+    @await Html.PartialAsync("../Admin/_ArticlesPartial", Model)
+</div>
+
+@section Scripts {
+
+    <script src="~/js/AdminArticlesControl.js" asp-append-version="true"></script>
+}
