Refactor. article publising cycle, added some controls

--- a/MVCApp/Views/Admin/Accounts.cshtml
+++ b/MVCApp/Views/Admin/Accounts.cshtml
@@ -72,7 +72,7 @@
 
 
 <div class="card table-card">
-    @await Html.PartialAsync("_AccountsPartial", Model)
+    @await Html.PartialAsync("../Admin/_AccountsPartial", Model)
 </div>
 
 @section Scripts {
