--- a/MVCApp/Views/Admin/Edit.cshtml
+++ b/MVCApp/Views/Admin/Edit.cshtml
@@ -14,5 +14,5 @@
 </div>
 
 <div class="card table-card">
-    @await Html.PartialAsync("_AccountEditForm", Model)
+    @await Html.PartialAsync("../Admin/_AccountEditForm", Model)
 </div>
