separation of views in admin

--- a/MVCApp/Views/Admin/Articles/Articles.cshtml
+++ b/MVCApp/Views/Admin/Articles/Articles.cshtml
@@ -72,7 +72,7 @@
 
 
 <div class="card table-card">
-    @await Html.PartialAsync("../Admin/_ArticlesPartial", Model)
+    @await Html.PartialAsync("../Admin/Articles/_ArticlesPartial", Model)
 </div>
 
 @section Scripts {
