--- a/MVCApp/Views/Admin/_AdminNav.cshtml
+++ b/MVCApp/Views/Admin/_AdminNav.cshtml
@@ -32,10 +32,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-admin" asp-action="Accounts"><i class="fas fa-user"></i> Accounts</a>
+                        <a class="nav-link text-admin" asp-action="Index" asp-controller="AdminAccounts"><i class="fas fa-user"></i> Accounts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-admin" asp-action="Articles"><i class="fas fa-book"></i> Articles</a>
+                        <a class="nav-link text-admin" asp-action="Index" asp-controller="AdminArticles"><i class="fas fa-book"></i> Articles</a>
                     </li>
                 </ul>
             </div>
