added component prerequisites

--- a/MVCApp/Views/Admin/Accounts/Edit.cshtml
+++ b/MVCApp/Views/Admin/Accounts/Edit.cshtml
@@ -16,3 +16,7 @@
 <div class="card table-card">
     @await Html.PartialAsync("../Admin/Accounts/_AccountEditForm", Model)
 </div>
+
+<div class="card table-card">
+    @await Component.InvokeAsync("AccountValidation")
+</div>
