--- a/MVCApp/wwwroot/css/AdminStyles.scss
+++ b/MVCApp/wwwroot/css/AdminStyles.scss
@@ -148,9 +148,13 @@ body {
     margin: 0.5rem;
 }
 
-.table-card {
+.content-card {
     margin: 0.5rem 2rem 0.5rem 2rem;
     border-radius: 15px;
+}
+
+.top-margin {
+    margin-top: 1.5rem;
 }
 
 .btn-blue {
@@ -216,3 +220,22 @@ tr {
         }
     }
 }
+
+.account-validation-controll {
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    .paragraph {
+        padding: 0 1rem 0 1rem;
+    }
+}
+
+.control-element {
+    display: flex;
+    justify-content: flex-end;
+
+    input {
+        margin: 0 5px 0 5px;
+    }
+}
+
