--- a/MVCApp/wwwroot/css/AdminStyles.css
+++ b/MVCApp/wwwroot/css/AdminStyles.css
@@ -75,11 +75,18 @@
   border-radius: 5px;
   font-weight: 500; }
 
+.btn-green:hover {
+  color: #2C2D39; }
+
 .btn-red {
   background-color: #f44336;
   color: #EBF2F2;
   border-radius: 5px;
   font-weight: 500; }
+
+.btn-red:hover {
+  background-color: #f54f43;
+  color: #2C2D39; }
 
 .toolbox {
   display: flex;
