--- a/MVCApp/Views/Admin/Accounts/_AccountEditForm.cshtml
+++ b/MVCApp/Views/Admin/Accounts/_AccountEditForm.cshtml
@@ -19,7 +19,7 @@
 
 <div class="formular-container">
 
-    <form asp-action="Update">
+    <form asp-action="Update" asp-controller="AdminAccounts">
         <div class="form-element">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="row" hidden="hidden">
