--- a/MVCApp/Views/Admin/Accounts/_AccountsPartial.cshtml
+++ b/MVCApp/Views/Admin/Accounts/_AccountsPartial.cshtml
@@ -74,7 +74,7 @@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pen"></i></a>
                     <a asp-action="Detail" asp-route-id="@item.Id"><i class="fas fa-info-circle"></i></a>
-                    <a class="delete-item" href="#" val="@item.Id"><i class="fas fa-trash-alt"></i></a>
+                    <a class="delete-item" href="#" val="@item.Id" accountname="@item.Name"><i class="fas fa-trash-alt"></i></a>
                 </td>
             </tr>
             }
